--- a/buf.yaml
+++ b/buf.yaml
@@ -10,6 +10,7 @@ lint:
     - RPC_REQUEST_STANDARD_NAME
     - PACKAGE_VERSION_SUFFIX
     - FIELD_LOWER_SNAKE_CASE
+    - PACKAGE_LOWER_SNAKE_CASE
   enum_zero_value_suffix: _UNSPECIFIED
   rpc_allow_same_request_response: true
   rpc_allow_google_protobuf_empty_requests: true
