--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -6,18 +6,19 @@ managed:
     except:
       - buf.build/googleapis/googleapis
 plugins:
-  - remote: buf.build/library/plugins/go
+  - remote: buf.build/library/plugins/go:v1.27.1-1
     out: .
     opt: paths=source_relative
-  - remote: buf.build/library/plugins/go-grpc
+  - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
     out: .
     opt:
       - paths=source_relative
       - require_unimplemented_servers=false
-  - remote: buf.build/grpc-ecosystem/plugins/grpc-gateway
+  - remote: buf.build/grpc-ecosystem/plugins/grpc-gateway:v2.10.0-1
     out: .
     opt:
       - paths=source_relative
+      - allow_repeated_fields_in_body=true
       - generate_unbound_methods=true
-  # - remote: buf.build/grpc-ecosystem/plugins/openapiv2
+  # - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.10.0-1
   #   out: openapiv2
