--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -18,7 +18,9 @@ plugins:
     out: .
     opt:
       - paths=source_relative
-      - allow_repeated_fields_in_body=true
       - generate_unbound_methods=true
-  # - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.10.0-1
-  #   out: openapiv2
+      - allow_repeated_fields_in_body=true
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.10.0-1
+    out: docs/swagger
+    opt:
+      - allow_repeated_fields_in_body=true
