--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -5,6 +5,7 @@ managed:
     default: github.com/hduhelp/api_open_sdk
     except:
       - buf.build/googleapis/googleapis
+      - buf.build/grpc-ecosystem/grpc-gateway
 plugins:
   - name: go
     out: .
