feat(rpc): remove old baseStaff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "editor.fontFamily": "'JetBrains Mono', Menlo, Monaco, 'Courier New', monospace",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": false
 }
