--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -1,6 +1,9 @@
 name: check buf generate up to date
+on:
+  push:
+    branches:
+      - main
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -22,7 +25,7 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-            
+
       - name: init-dependance
         run: |
           make install-tools
