--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -18,19 +18,23 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: actions/cache@v3
+        id: cache-golang
         with:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
+            $(go env GOPATH)/bin
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: init-dependance
-        run: |
-          make install-tools
+      - name: init dependance
+        if: steps.cache-golang.outputs.cache-hit != 'true'
+        run: make install-tools
+
       - name: generate proto
         run: make generate-proto
+
       - name: check if files up to date
         run: |
           if [[ `git status --porcelain` ]]; then
