feat(rpc): use standard respone

--- a/buf.yaml
+++ b/buf.yaml
@@ -5,14 +5,14 @@ deps:
   - buf.build/grpc-ecosystem/grpc-gateway
 lint:
   use:
-    - BASIC
+    - DEFAULT
+  ignore:
+    - campusapis/third/v1/weixiao.proto
   except:
-    - RPC_REQUEST_STANDARD_NAME
-    - PACKAGE_VERSION_SUFFIX
     - FIELD_LOWER_SNAKE_CASE
+    - PACKAGE_VERSION_SUFFIX
     - PACKAGE_LOWER_SNAKE_CASE
   enum_zero_value_suffix: _UNSPECIFIED
-  rpc_allow_same_request_response: true
   rpc_allow_google_protobuf_empty_requests: true
   rpc_allow_google_protobuf_empty_responses: false
   service_suffix: Service
