--- a/.github/workflows/buf-lint.yml
+++ b/.github/workflows/buf-lint.yml
@@ -7,11 +7,9 @@ on:
     branches:
       - main
     paths:
-      - "**.go"
-      - "**.go.json"
-      - "go.mod"
-      - "go.sum"
+      - "*.proto"
       - "buf.yaml"
+      - ".github/workflows/buf-lint.yaml"
 
 jobs:
   lint-protos:
