--- a/.github/workflows/buf-lint.yml
+++ b/.github/workflows/buf-lint.yml
@@ -13,9 +13,8 @@ on:
 
 jobs:
   lint-protos:
-    # Run `git checkout`
-    - uses: actions/checkout@v3
-    # Install the `buf` CLI
-    - uses: bufbuild/buf-setup-action@v1
-    # Lint your Protobuf sources
-    - uses: bufbuild/buf-lint-action@v1
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: bufbuild/buf-setup-action@v1
+      - uses: bufbuild/buf-lint-action@v1
