--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -51,11 +51,8 @@ jobs:
       - name: check if files up to date
         run: |
           if [[ `git status --porcelain` ]]; then
-            git config --global user.name 'FDKevin'
-            git config --global user.email 'fdkevinzero@gmail.com'
-            git add -A
-            git commit -m "ci(gen): buf generate up to date"
-            git push
+            echo "buf gen code not up to date"
+            exit 1
           fi
       
       - name: warming go proxy
