--- a/buf.yaml
+++ b/buf.yaml
@@ -8,13 +8,13 @@ lint:
     - DEFAULT
   ignore:
     - campusapis/third/v1/weixiao.proto
-    - campusapis/backup/backup.proto
   except:
     - FIELD_LOWER_SNAKE_CASE
     - PACKAGE_VERSION_SUFFIX
     - PACKAGE_LOWER_SNAKE_CASE
     - ENUM_VALUE_PREFIX
     - ENUM_ZERO_VALUE_SUFFIX
+    - RPC_REQUEST_RESPONSE_UNIQUE
   enum_zero_value_suffix: _UNSPECIFIED
   rpc_allow_google_protobuf_empty_requests: true
   rpc_allow_google_protobuf_empty_responses: false
