--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -8,7 +8,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: load Go 1.22 env
+      - name: load env Go 1.22
         uses: actions/setup-go@v3
         with:
           go-version: 1.22
